# db-api-data-collector

./: .gitignore  main.py  pyproject.toml
.github/workflows/: main.yml
01_data/01_raw/API/: 241009_11.csv  241009_12.csv  241009_13.csv  241009_14.csv  241009_15.csv  241009_16.csv  241009_17.csv  241009_18.csv  241009_19.csv  241009_20.csv  241009_21.csv  241009_22.csv  241009_23.csv  241010_00.csv  241010_01.csv  241010_02.csv  241010_03.csv  241010_04.csv  241010_05.csv  241010_06.csv  241010_07.csv  241010_08.csv  241010_09.csv  241010_10.csv  241010_11.csv  241010_12.csv  241010_13.csv  241010_14.csv  241010_15.csv  241010_16.csv  241010_17.csv  241010_18.csv  241010_19.csv  241010_20.csv  241010_21.csv  241010_22.csv  241010_23.csv  241011_00.csv  241011_01.csv  241011_02.csv  (+11590 more)
01_data_ingestion/: Station.ipynb  db_api_all_merge.py  db_api_daily_merge.py
tests/: test_main.py
