[tool.poetry]
name = "db-api-data-collector"
version = "0.1.0"
description = ""
authors = ["raphaelkach <wi23146@lehre.dhbw-stuttgart.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.0"
pytz = "^2022.2"
xmltodict = "^0.13.0"
charset-normalizer = "3.3.0"
numpy = "^2.1.2"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
black = "^24.10.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
